nss-mymachines: Build conditionally when HAVE_MYHOSTNAME is set
Fixes build failures when building with --disable-myhostname

Upstream-Status: Pending

Signed-off-by: Khem Raj <raj.khem@gmail.com>

%% original patch: 0011-nss-mymachines-Build-conditionally-when-HAVE_MYHOSTN.patch

--- a/Makefile.am
+++ b/Makefile.am
@@ -5143,6 +5143,7 @@ SYSTEM_UNIT_ALIASES += \
 BUSNAMES_TARGET_WANTS += \
 	org.freedesktop.machine1.busname
 
+if HAVE_MYHOSTNAME
 libnss_mymachines_la_SOURCES = \
 	src/nss-mymachines/nss-mymachines.sym \
 	src/nss-mymachines/nss-mymachines.c
@@ -5163,6 +5164,7 @@ libnss_mymachines_la_LIBADD = \
 rootlib_LTLIBRARIES += \
 	libnss_mymachines.la
 
+endif
 endif
 
 polkitpolicy_in_files += \
