make test dir configurable
Upstream-Status: Pending

test maybe be run on target in cross-compile environment, and test dir
is not the compilation dir, so make it configurable

Signed-off-by: Roy Li <rongqing.li@windriver.com>
Signed-off-by: Khem Raj <raj.khem@gmail.com>

%% original patch: 0016-make-test-dir-configurable.patch

--- a/Makefile.am
+++ b/Makefile.am
@@ -214,7 +214,7 @@ AM_CPPFLAGS = \
 	-DROOTLIBDIR=\"$(rootlibdir)\" \
 	-DROOTLIBEXECDIR=\"$(rootlibexecdir)\" \
 	-DROOTHOMEDIR=\"$(roothomedir)\" \
-	-DTEST_DIR=\"$(abs_top_srcdir)/test\" \
+	-DTEST_DIR=\"$(testdir)/test\" \
 	-I $(top_srcdir)/src \
 	-I $(top_builddir)/src/basic \
 	-I $(top_srcdir)/src/basic \
